--- a/shipping.html
+++ b/shipping.html
@@ -108,7 +108,7 @@
             </div>
           </div>
           <p class="text text--mb js_website-corp"></p>
-          <span class="footer__span">© 2021 All rights reserved</span>
+          <span class="footer__span">© All rights reserved</span>
         </footer>
       </div>
     </div>
